# claude-code-rust

./: .env  .gitignore  ARCHITECTURE.md  BRIDGE_REFACTOR_REPORT.md  CI_CD_GUIDE.md  CODE_OF_CONDUCT.md  COMMAND_SYSTEM_REFACTOR_REPORT.md  CONTRIBUTING.md  COORDINATOR_AUTODREAM_REFACTOR_REPORT.md  Cargo.toml  Dockerfile  FEATURES.md  MAINTAINERS.md  README-RUST.md  README.md  SECURITY_REFACTOR_REPORT.md  SERVICE_LAYER_REFACTOR_REPORT.md  STATE_MANAGEMENT_REFACTOR_REPORT.md  TOOL_SYSTEM_REFACTOR_REPORT.md  package-lock.json  package.json
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  welcome.yml
cc-switch-main/: README.md  README_JA.md  README_ZH.md  cc-switch-rust-integration.patch
cc-switch-main/src/: App.tsx
cc-switch-main/src-tauri/: Cargo.toml
cc-switch-main/src-tauri/src/: lib.rs  opencode_config.rs  tray.rs
gui-client/: Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts
gui-client/src/: App.tsx  index.css  main.tsx  router.tsx
gui-client/src-tauri/: Cargo.toml  tauri.conf.json
gui-client/src-tauri/src/: commands.rs  main.rs  models.rs
gui-client/src/components/: Layout.tsx  Sidebar.tsx
gui-client/src/components/chat/: ChatInput.tsx  ChatPage.tsx  HistoryPage.tsx  MessageList.tsx
gui-client/src/components/common/: NotFound.tsx
gui-client/src/components/models/: ModelPage.tsx  ModelsPage.tsx
gui-client/src/components/settings/: SettingsPage.tsx
gui-client/src/components/tasks/: TaskPage.tsx
gui-client/src/components/ui/: alert.tsx  badge.tsx  button.tsx  sidebar.tsx  switch.tsx  tabs.tsx
gui-client/src/context/: AppContext.tsx  BridgeProvider.tsx
gui-client/src/hooks/: useApi.ts  useStore.ts
gui-client/src/lib/: api.test.ts  api.ts  utils.ts
gui-client/src/pages/: ChatPage.tsx  HistoryPage.tsx  PluginsPage.tsx  SettingsPage.tsx
gui-client/src/types/: index.ts
scripts/: publish.ps1  publish.sh  upload-release.sh
src/: App.tsx  api.ts  error.rs  index.css  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: claude-desktop.desktop
src-tauri/src/: app_context.rs  lib.rs
src-tauri/src/api/: state.rs
src-tauri/src/app_studio/: mod.rs
src-tauri/src/bridge/: interceptor.rs  mod.rs
src-tauri/src/execution/: cache.rs  mod.rs  monitor.rs  parallel.rs  types.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/im_integration/: feishu_bridge_manager.rs  mod.rs
src-tauri/src/mcp/: bridge.rs  discovery.rs  mcp_client.rs  mod.rs  pool.rs  registry.rs  types.rs
src-tauri/src/native_engine/: context_compressor.rs  engine_core.rs  mod.rs  parallel_executor.rs  tool_loop.rs
src-tauri/src/plugin/: mod.rs
src-tauri/src/sandbox/: mod.rs
src-tauri/src/terminal/: mod.rs
src/agents/: agent.rs  built_in.rs  color.rs  fork.rs  memory.rs  mod.rs  types.rs
src/analytics/: mod.rs
src/api/: conversations.ts  index.ts  mcp.ts  terminal.ts
src/bootstrap/: cli.rs  entry.rs  init.rs  macros.rs  mod.rs
src/bridge/: auth.rs  connection.rs  manager.rs  mod.rs  session.rs  types.rs  worker.rs
src/commands/: auth.rs  builtin.rs  config.rs  executor.rs  interactive.rs  mod.rs  query.rs  registry.rs  types.rs  ultraplan.rs
src/components/: AgentPanel.tsx  AnalyticsPanel.tsx  BuildPanel.tsx  ChatHeader.tsx  ChatMainContent.tsx  ErrorBoundary.tsx  ExecutionProgressBar.tsx  FileExplorer.tsx  GitCommitPanel.tsx  GitDiffView.tsx  IMIntegrationPanel.tsx  LivePreviewPanel.tsx  MainContent.tsx  MonacoEditor.tsx  ResizableLayout.tsx  Sidebar.tsx  SwarmCollaboration.tsx  TerminalPanel.tsx  WorkspacePanel.tsx
src/components/chat/: AssistantMessage.tsx  MessageExportActions.tsx  UserMessage.tsx
src/components/common/: VirtualList.tsx
src/components/design/: SkillGallery.tsx
src/config/: mcp_config.rs  mod.rs
src/coordinator/: mod.rs
src/daemon/: mod.rs
src/features/: agent_triggers.rs  buddy.rs  coordinator.rs  fork_subagent.rs  history_snip.rs  kairos.rs  mod.rs  proactive.rs  torch.rs  ultraplan.rs  voice.rs  web_browser.rs  workflow.rs
src/features/file-upload/: useFileUpload.ts
src/features/message-list/: MessageList.tsx
src/features/model-catalog/: useModelCatalog.ts
src/hooks/: useExecutionProgress.ts  useStreamParser.ts
src/i18n/: loader.rs
src/locales/: en.json  zh.json
src/mcp/: mod.rs
src/performance/: metrics.rs  mod.rs  runtime.rs  startup.rs
src/query/: compressor.rs  context.rs  engine.rs  message.rs  mod.rs  pipeline.rs  result.rs  retry.rs
src/security/: mod.rs
src/security/audit/: events.rs  logger.rs  mod.rs
src/security/permissions/: command_permissions.rs  file_permissions.rs  mod.rs  network_permissions.rs  role_manager.rs  tool_permissions.rs  types.rs
src/security/sandbox/: bash_sandbox.rs  command_checker.rs  environment.rs  mod.rs
src/services/: auto_dream.rs  mod.rs
src/services/analytics/: growthbook.rs  mod.rs
src/services/api/: claude.rs  client.rs  mod.rs  usage.rs
src/state/: app_state.rs  mod.rs  signal.rs
src/stores/: useExecutionStore.ts
src/styles/: theme.css
src/tools/: agent.rs  base.rs  bash.rs  command_tools.rs  file.rs  file_tools.rs  git.rs  mod.rs  permissions.rs  registry.rs  search.rs  search_tools.rs  types.rs
src/utils/: documentExport.ts  fileOperations.ts  mod.rs  paths.rs  strings.rs  time.rs
src/voice/: capture.rs  mod.rs  silence.rs  transcription.rs
src/workers/: streamParser.worker.ts
(+23 files in other folders)
