[package]
name = "claude-code-rs"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code Team"]
description = "Claude Code - AI-powered coding assistant (Rust implementation)"
license = "MIT"
repository = "https://github.com/anthropics/claude-code"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
dirs = "5.0"
whoami = "1.5"
glob-match = "0.2"
regex = "1.10"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# CLI and UI
clap = { version = "4.4", features = ["derive", "cargo"] }
console = "0.15"
indicatif = "0.17"
colorful = "0.2"
crossterm = "0.27"
ratatui = "0.26"

# File system and OS
glob = "0.3"
ignore = "0.4"
path-slash = "0.1"
home = "0.5"

# Git integration
git2 = "0.18"

# HTTP and API
reqwest = { version = "0.11", features = ["json", "stream", "cookies"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.4"
url = "2.5"
percent-encoding = "2.3"

# Crypto and security
rand_core = "0.6"
aes-gcm = "0.10"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"

# Configuration
config = "0.14"
toml = "0.8"
yaml-rust = "0.4"
json5 = "0.4"

# Data structures and utilities
indexmap = "2.1"
dashmap = "5.5"
once_cell = "1.19"
lazy_static = "1.4"
parking_lot = "0.12"
crossbeam = "0.8"
event-listener = "5.2"
ctrlc = "3.4"
uuid = { version = "1.6", features = ["v4"] }

# Time and date
time = "0.3"

# Error handling and backtrace
eyre = "0.6"
color-eyre = "0.6"

# Templates and formatting
minijinja = "1.0"
strum = { version = "0.25", features = ["derive"] }

# Regex and parsing
nom = "7.1"
pest = "2.7"
pest_derive = "2.7"

# Process management
sysinfo = "0.30"

# Optional features
[features]
default = []
bridge = []
voice = []
mcp-support = []
daemon = []
experimental = []

[[bin]]
name = "claude"
path = "src/main.rs"

[[bin]]
name = "claude-bridge"
path = "src/bin/bridge.rs"
required-features = ["bridge"]

[dev-dependencies]
mockito = "1.1"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
tokio-test = "0.4"
