[package]
name = "claude-code-gui"
version = "0.1.0"
edition = "2021"
description = "Claude Code GUI Client with CC Switch integration"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.0.0-rc.9" }

[dependencies]
tauri = { version = "2.0.0-rc.9", features = ["fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file", "path-exists"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
