[package]
name = "claude-code-gui"
version = "1.0.0"
description = "GUI Client for Rust Claude Code"
authors = ["Claude Code Team"]
license = "MIT"
repository = "https://github.com/lorryjovens-hub/claude-code-rust"
edition = "2021"
rust-version = "1.70"

[lib]
name = "claude_code_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
open = "5.0"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
